--- a/dove-operiamo.html
+++ b/dove-operiamo.html
@@ -89,7 +89,7 @@
           <li><a class="nav-link scrollto" href="./index.html#team">CONTATTI</a></li>
           <li><a class="nav-link scrollto" href="./index.html#contact">DOVE SIAMO</a></li>
           <li><a class="nav-link" href="./inner-page.html">I NOSTRI EVENTI</a></li>
-          <li><a class="nav-link active" href="./dove-operiamo.html">DOVE OPERIAMO</a></li>
+          <li><a class="nav-link" href="./dove-operiamo.html">DOVE OPERIAMO</a></li>
           <li><a class="nav-link active" href="./ringraziamenti.html">ATTESTATI</a></li>
           <li><a class="nav-link" href="./pensieri.html" style="padding-right: 30px;">PENSIERI</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -133,35 +133,66 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <section class="inner-page align-items-center" style="display: flex; margin: 0 auto; text-align: center; align-items: center;">
-      <img src="./assets/img/mappa.jpg" style="image-rendering: optimizeQuality; object-fit: cover; width: 20rem; margin-left: 15rem; margin-right: 5rem;">
-        <div style="width: 70%; margin: 0 auto; text-align: left;">
-          <dl>
-            <dt>Domiciliarità</dt>
-            <br>
-            <dt>Mondovì</dt>
-            <dd>- <a target="_blank" href="https://maps.app.goo.gl/e8UzWrH4LxPR4Kub6">Ospedale "Regina Montis Regalis" Mondovì</a></dd>
-            <dd>- <a target="_blank" href="https://maps.app.goo.gl/wzxmHbMRZafrJMUL9">Casa Di Riposo Sacra Famiglia</a></dd>
-            <dt>Vicoforte</dt>
-            <dd>- <a target="_blank" href="https://maps.app.goo.gl/U7fMpMBZFNjjLwpW6">Casa Di Riposo S. Giuseppe</a></dd>
-            <dt>San Michele di Mondovì</dt>
+    <section class="inner-page align-items-center" style="display: flex; margin: 0 auto; text-align: center; align-items: center; width: 100%;">
+      <div style="margin: 0 auto;">
+        <img src="./assets/img/mappa.jpg" style="image-rendering: optimizeQuality; object-fit: cover; width: 15rem; margin-left: 10rem; margin-right: 10rem;">
+        <div style="width: 100%; margin: 0 auto; text-align: left; padding-top: 2rem;">
+          <ul>
+            <dt style="color:cornflowerblue;">VALLE MONREGALESE</dt>
+           <div style="margin-left: 2em;">
+            <li>
+              <dd>
+                <dt>Mondovì</dt>
+                <dd>- <a target="_blank" href="https://maps.app.goo.gl/e8UzWrH4LxPR4Kub6">Ospedale "Regina Montis Regalis" Mondovì</a></dd>
+                <dd>- <a target="_blank" href="https://maps.app.goo.gl/wzxmHbMRZafrJMUL9">Casa Di Riposo Sacra Famiglia</a></dd>    
+              </dd>
+            </li>
+            <li>
+              <dt>Vicoforte</dt>
+              <dd>- <a target="_blank" href="https://maps.app.goo.gl/U7fMpMBZFNjjLwpW6">Casa Di Riposo S. Giuseppe</a></dd>
+            </li>
+            <li>
+              <dt>San Michele di Mondovì</dt>
             <dd>- <a target="_blank" href="https://maps.app.goo.gl/t3ER6wRkhcdRjwF9A">Casa di Riposo San Michele Arcangelo</a></dd>
+            </li>
+           </div>
+           <br>
+           <dt style="color: green;">VALLE CEBANA</dt>
+           <div style="margin-left: 2em;">
+           <li>
             <dt>Ceva</dt>
             <dd>- <a target="_blank" href="https://maps.app.goo.gl/wHx1iN6Dw1uXoWRS9">Ospedale Poveri Infermi Ceva</a></dd>
             <dd>- <a target="_blank" href="https://maps.app.goo.gl/wHx1iN6Dw1uXoWRS9">Centro diurno - Via XX settembre, 3</a></dd>
+          </li>
+          <li>
             <dt>Mombasiglio</dt>
-            <dd>- <a target="_blank" href="https://maps.app.goo.gl/8vVuMj6ZBurBc3x16">Rsa La casa del sorriso</a></dd>
-            <dt>Garessio</dt>
-            <dd>- <a target="_blank" href="https://maps.app.goo.gl/sWEDUL2hy5dXsJY27">Fondazione Opera Pia Garelli</a></dd>
-          
-          </dl>
+           <dd>- <a target="_blank" href="https://maps.app.goo.gl/8vVuMj6ZBurBc3x16">Rsa La casa del sorriso</a></dd>
+          </li>
+          <li>
+           <dt>Garessio</dt>
+           <dd>- <a target="_blank" href="https://maps.app.goo.gl/sWEDUL2hy5dXsJY27">Fondazione Opera Pia Garelli</a></dd>
+          </li>
+          </div>
+          <br>
+          <dt><a style="color: black;" href="https://federavo.it/project/le-avo-tra-innovazione-e-tradizione-avo-mondovi-con-te-per-te/" target="_blank">Domiciliarità</a></dt>
+          <div>
+            <ul>
+              <li style="color: orange;">Valle Bormida</li>
+              <li style="color: green;">Valle Cebana</li>
+              <li style="color: cornflowerblue;">Valle Monregalese</li>
+              <li style="color: darkred;">Valle Tanaro</li>
+            </ul>
+          </div>
+          </ul>
         </div>
+      </div>
+      
     </div>
     </section>
 
   </main><!-- End #main -->
 
-  <footer id="footer">
+  <footer id="footer" style="width: 100%;">
     <div class="container"  style="display: block;">
       <h3>AVO Mondovì</h3>
       <p>SONO AVO PERCHÉ CREDO NEL VALORE DELLA SOLIDARIETÀ.</p>
