--- a/ringraziamenti.html
+++ b/ringraziamenti.html
@@ -168,7 +168,7 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <section class="inner-page align-items-center" style="display: flex; margin: 0 auto; text-align: center; align-items: center;">
+    <section class="inner-page align-items-center" style="display: flex; margin: 0 auto; text-align: center; align-items: center; width: 100%;">
       <div style="display: flex; overflow-x: scroll; width: 80%; align-items: center; margin: 0 auto; ">
         <div class="container">
           <div class="card" style="width: 30%;">
@@ -176,7 +176,7 @@
             <div class="card-body">
               <h4 class="card-title">ATTESTATI DI RICONOSCIMENTO</h4>
               <p class="card-text">Attestati di ringraziamento conferiti ad AVO Mondovì.</p>
-              <a href="#" class="btn btn-primary" onclick="openModal()">Apri pdf</a>
+              <a style="cursor: pointer;" class="btn btn-primary" onclick="openModal()">Apri pdf</a>
             </div>
           </div>
         </div>
