--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">DIVENTARE VOLONTARI AVO</h2>
               <p class="animate__animated animate__fadeInUp">L’ A.V.O. organizza corsi di preparazione per diventare volontari ogni anno. Le iscrizioni vengono aperte circa due mesi prima dall’inizio di ciascun corso.</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">+</a>
+              <a href="#formAvo" class="btn-get-started animate__animated animate__fadeInUp scrollto">+</a>
             </div>
           </div>
         </div>
@@ -145,7 +145,7 @@
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">DOVE SIAMO</h2>
               <p class="animate__animated animate__fadeInUp">La sede centrale di AVO Mondovì si trova in Piazza Ellero, 45. Inoltre, al 1° piano dell'Ospedale di Mondovì, si trova il secondo ufficio.</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">+</a>
+              <a href="#dove-siamo" class="btn-get-started animate__animated animate__fadeInUp scrollto">+</a>
             </div>
           </div>
         </div>
