--- a/dove-operiamo.html
+++ b/dove-operiamo.html
@@ -89,8 +89,8 @@
           <li><a class="nav-link scrollto" href="./index.html#team">CONTATTI</a></li>
           <li><a class="nav-link scrollto" href="./index.html#contact">DOVE SIAMO</a></li>
           <li><a class="nav-link" href="./inner-page.html">I NOSTRI EVENTI</a></li>
-          <li><a class="nav-link" href="./dove-operiamo.html">DOVE OPERIAMO</a></li>
-          <li><a class="nav-link active" href="./ringraziamenti.html">ATTESTATI</a></li>
+          <li><a class="nav-link active" href="./dove-operiamo.html">DOVE OPERIAMO</a></li>
+          <li><a class="nav-link" href="./ringraziamenti.html">ATTESTATI</a></li>
           <li><a class="nav-link" href="./pensieri.html" style="padding-right: 30px;">PENSIERI</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
