--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">AVO MONDOVI</a></h1>
+      <h1 class="logo me-auto"><a href="index.html">AVO MONDOVÌ</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -121,7 +121,7 @@
         <div class="carousel-item active" style="background-image: url(assets/img/slide/carosello.jpg)">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown"><span>AVO MONDOVI ODV ETS</span> - Associazione Volontari Ospedalieri Mondovì</h2>
+              <h2 class="animate__animated animate__fadeInDown"><span>AVO MONDOVÌ ODV ETS</span> - Associazione Volontari Ospedalieri Mondovì</h2>
               <p class="animate__animated animate__fadeInUp">Obiettivo dell’AVO è “aiutare chi soffre contribuendo ad una crescente umanizzazione delle strutture ospedaliere e di ricovero”.</p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">+</a>
             </div>
@@ -211,7 +211,7 @@
                 class="video-js"
                 controls
                 preload="auto"
-                poster="./assets/img/avo.mondovi/AVO-MONDOVI.jpg"
+                poster="./assets/img/avo.mondovi/AVO-MONDOVÌ.jpg"
                 data-setup='{}'
                 width="50%"
                 height="300em">
@@ -242,7 +242,7 @@
           </div>
           
           <div class="videoContainer" style="width: 40%; margin:0 auto; vertical-align: middle;">
-            <video class="videos" style="vertical-align: middle;" id="player" playsinline controls data-poster="./assets/img/avo.mondovi/AVO-MONDOVI.jpg">
+            <video class="videos" style="vertical-align: middle;" id="player" playsinline controls data-poster="./assets/img/avo.mondovi/AVO-MONDOVÌ.jpg">
               <source src="./assets/videos/presentazione.mp4" type="video/mp4" />
             </video>
           </div>
