--- a/pensieri.html
+++ b/pensieri.html
@@ -71,7 +71,7 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">AVO MONDOVI</a></h1>
+      <h1 class="logo me-auto"><a href="index.html">AVO MONDOVÌ</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -133,7 +133,7 @@
       <div class="row">
         
         <div  class="videoContainer" style="width: 60%; margin:0 auto; vertical-align: middle;">
-          <video style="width: 100%;" id="player" playsinline controls data-poster="./assets/img/avo.mondovi/AVO-MONDOVI.jpg">
+          <video style="width: 100%;" id="player" playsinline controls data-poster="./assets/img/avo.mondovi/AVO-MONDOVÌ.jpg">
             <source src="./assets/videos/pensieri.mp4" type="video/mp4" />
           </video>
         </div>
